--- a/docs/extra_style.css
+++ b/docs/extra_style.css
@@ -1,26 +1,20 @@
 .md_main div,.md-content__inner,.md-main{
     background-color:#f2f3f7;
 }
-p,ul,ol{
+ul,ol{
     border-right: 1px solid #dddddd;
     border-bottom: 1px solid #dddddd;
     background-color: #efefef;
+    color: #555;
 }
 .md-header-nav *,.md-header-nav{
     background-color: #f9f9f9;
     color:#485269;
 }
-
-p{
-    box-sizing: border-box;
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    padding-top: 0em;
+.md-search__input{
+    background-color: #ffffff;
+    color: #555;
 }
-p:not(p+p,ul+p,ol+p){
-    padding-top: 1em !important;
-}
-
 /* Siv3Dから拝借*/
 .md-typeset h1 {
     /*font-size: 24pt;*/
