--- a/docs/extra_style.css
+++ b/docs/extra_style.css
@@ -11,10 +11,18 @@ ul,ol{
     background-color: #f9f9f9;
     color:#485269;
 }
-.md-search__input{
+.md-search__inner,.md-search__inner *{
     background-color: #ffffff;
     color: #555;
 }
+.md-search__inner{
+    border: solid 1px #333;
+}
+.md-search__icon{
+    background-color: #485269 !important;
+    color: #ffffff !important;
+}
+
 /* Siv3Dから拝借*/
 .md-typeset h1 {
     /*font-size: 24pt;*/
